hphp/test/quick/zend_closure_020.php.expectf
object(foo)#1 (2) {
  ["test":"foo":private]=>
  int(3)
  ["a"]=>
  object(Closure$foo$x$df6991b3d631d589b39d5dc9f35d5aa2$0)#2 (1) {
    ["a":"Closure$foo$x$df6991b3d631d589b39d5dc9f35d5aa2$0":private]=>
    *RECURSION*
  }
}
bool(true)
bool(true)
HipHop Fatal error: Cannot access private property foo::$test in %s on line 19
